--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 html {
     scroll-behavior: smooth;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 .img1 {
@@ -63,6 +70,7 @@ body {
 .main-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .section {
@@ -103,4 +111,8 @@ body {
 .nav-link {
     text-decoration: none;
     color: #fff;
+}
+
+.contactsItem {
+    line-height: 1.6;
 }
